fix(song-queue): prevent queued song text from overflowing

--- a/src/renderer/src/features/song-queue/components/queued-songs/QueuedSongs.module.scss
+++ b/src/renderer/src/features/song-queue/components/queued-songs/QueuedSongs.module.scss
@@ -20,3 +20,7 @@
    padding-bottom: 0;
    border: none;
 }
+
+.queuedSong > * {
+   max-width: 20ch;
+}
